// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Welcome to helo books Should return a message on app start 1`] = `
Object {
  "message": "This is Hello books",
}
`;

exports[`Welcome to helo books Should return an error message for an invalid URL 1`] = `
Object {
  "error": "Sorry, the requested endpoint does not exist on our server",
}
`;
